--- a/module05/Northwind.Services.EntityFrameworkCore/Northwind.Services.EntityFrameworkCore.csproj
+++ b/module05/Northwind.Services.EntityFrameworkCore/Northwind.Services.EntityFrameworkCore.csproj
@@ -2,23 +2,39 @@
 
     <PropertyGroup>
         <TargetFramework>netcoreapp3.1</TargetFramework>
-        <CodeAnalysisRuleSet>../code-analysis.ruleset</CodeAnalysisRuleSet>
+        <CodeAnalysisRuleSet>Properties\code-analysis.ruleset</CodeAnalysisRuleSet>
         <GenerateDocumentationFile>true</GenerateDocumentationFile>
     </PropertyGroup>
+
+    <ItemGroup>
+      <None Remove="Properties\code-analysis.ruleset" />
+      <None Remove="Properties\stylecop.json" />
+    </ItemGroup>
 
     <ItemGroup>
         <ProjectReference Include="..\Northwind.Services\Northwind.Services.csproj" />
     </ItemGroup>
     <ItemGroup>
-        <AdditionalFiles Include="..\stylecop.json" Link="Properties\stylecop.json" />
-        <AdditionalFiles Include="..\code-analysis.ruleset" Link="Properties\code-analisys.ruleset" />
+		<AdditionalFiles Include="..\stylecop.json" Link="Properties\stylecop.json" />
+		<AdditionalFiles Include="..\code-analysis.ruleset" Link="Properties\code-analysis.ruleset" />
+		<AdditionalFiles Include="Properties\code-analysis.ruleset" />
+		<AdditionalFiles Include="Properties\stylecop.json" />
     </ItemGroup>
     <ItemGroup>
+        <PackageReference Include="AutoMapper" Version="11.0.1" />
         <PackageReference Include="Microsoft.CodeAnalysis.FxCopAnalyzers" Version="2.9.6">
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
             <PrivateAssets>all</PrivateAssets>
         </PackageReference>
-        <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.22" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.1.22">
+          <PrivateAssets>all</PrivateAssets>
+          <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
+        <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.22" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="3.1.22">
+          <PrivateAssets>all</PrivateAssets>
+          <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
         <PackageReference Include="StyleCop.Analyzers" Version="1.1.118">
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
             <PrivateAssets>all</PrivateAssets>
