--- a/module05/NorthwindApiApp/appsettings.json
+++ b/module05/NorthwindApiApp/appsettings.json
@@ -16,6 +16,6 @@
     "SqlService": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=Northwind2;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
   },
 
-  //"ServiceType": "InMemory"
-  "ServiceType": "Northwind"
+  "ServiceType": "InMemory"
+  //"ServiceType": "Northwind"
 }
