--- a/module05/NorthwindApiApp/appsettings.json
+++ b/module05/NorthwindApiApp/appsettings.json
@@ -13,9 +13,10 @@
   },
 
   "ConnectionStrings": {
-    "SqlService": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=Northwind2;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+    "SqlService": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=Northwind2;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False",
+    "BloggingSqlService": "data source=(localdb)\\MSSQLLocalDB; Integrated Security=True; Initial Catalog=NorthwindBlogging;"
   },
 
-  "ServiceType": "InMemory"
-  //"ServiceType": "Northwind"
+  //"ServiceType": "InMemory"
+  "ServiceType": "Northwind"
 }
