--- a/module05/NorthwindApiApp/NorthwindApiApp.csproj
+++ b/module05/NorthwindApiApp/NorthwindApiApp.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
     <PropertyGroup>
         <TargetFramework>netcoreapp3.1</TargetFramework>
@@ -13,6 +13,7 @@
         <ProjectReference Include="..\Northwind.DataAccess.SqlServer\Northwind.DataAccess.SqlServer.csproj" />
         <ProjectReference Include="..\Northwind.DataAccess\Northwind.DataAccess.csproj" />
         <ProjectReference Include="..\Northwind.Services.DataAccess\Northwind.Services.DataAccess.csproj" />
+        <ProjectReference Include="..\Northwind.Services.EntityFrameworkCore.Blogging\Northwind.Services.EntityFrameworkCore.Blogging.csproj" />
         <ProjectReference Include="..\Northwind.Services.EntityFrameworkCore\Northwind.Services.EntityFrameworkCore.csproj" />
         <ProjectReference Include="..\Northwind.Services\Northwind.Services.csproj" />
     </ItemGroup>
