Fix nuget packages. Add controllers

--- a/module06/NorthwindMvcApp/appsettings.json
+++ b/module06/NorthwindMvcApp/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "NorthwindMvcAppContext": "Server=(localdb)\\mssqllocaldb;Database=NorthwindMvcAppContext-8387eab0-9205-45c5-9cec-8163f0696fce;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
