Implement article controller

--- a/module06/NorthwindMvcApp/appsettings.json
+++ b/module06/NorthwindMvcApp/appsettings.json
@@ -7,7 +7,15 @@
     }
   },
   "AllowedHosts": "*",
+
+  "PictureService": {
+    "MaxFileSize": 52428800
+  },
+
   "ConnectionStrings": {
-    "NorthwindMvcAppContext": "Server=(localdb)\\mssqllocaldb;Database=NorthwindMvcAppContext-8387eab0-9205-45c5-9cec-8163f0696fce;Trusted_Connection=True;MultipleActiveResultSets=true"
-  }
+    "SqlService": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=Northwind2;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+  },
+
+  //"ServiceType": "InMemory"
+  "ServiceType": "Northwind"
 }
