--- a/module06/NorthwindMvcApp/NorthwindMvcApp.csproj
+++ b/module06/NorthwindMvcApp/NorthwindMvcApp.csproj
@@ -10,11 +10,13 @@
 		<AdditionalFiles Include="..\code-analysis.ruleset" Link="Properties\code-analysis.ruleset" />
 	</ItemGroup>
 	<ItemGroup>
+		<PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="3.1.21" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.21" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.1.21">
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
+		<PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="3.1.21" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.21" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="3.1.21">
 			<PrivateAssets>all</PrivateAssets>
@@ -22,9 +24,13 @@
 		</PackageReference>
 		<PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.5" />
 	</ItemGroup>
-
 	<ItemGroup>
-		<ProjectReference Include="..\NorthwindApiApp\NorthwindApiApp.csproj" />
+	  <ProjectReference Include="..\Northwind.DataAccess.SqlServer\Northwind.DataAccess.SqlServer.csproj" />
+	  <ProjectReference Include="..\Northwind.DataAccess\Northwind.DataAccess.csproj" />
+	  <ProjectReference Include="..\Northwind.Services.DataAccess\Northwind.Services.DataAccess.csproj" />
+	  <ProjectReference Include="..\Northwind.Services.EntityFrameworkCore.Blogging\Northwind.Services.EntityFrameworkCore.Blogging.csproj" />
+	  <ProjectReference Include="..\Northwind.Services.EntityFrameworkCore\Northwind.Services.EntityFrameworkCore.csproj" />
+	  <ProjectReference Include="..\Northwind.Services\Northwind.Services.csproj" />
 	</ItemGroup>
 
 </Project>
