--- a/module06/NorthwindMvcApp/appsettings.json
+++ b/module06/NorthwindMvcApp/appsettings.json
@@ -13,9 +13,10 @@
   },
 
   "ConnectionStrings": {
-    "SqlService": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=Northwind2;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+    "SqlService": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=Northwind2;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False",
+    "UsersDb": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=IdentityDb;Trusted_Connection=True;"
   },
-
+  "NorthwindApiBaseUrl": "http://localhost:5000/",
   //"ServiceType": "InMemory"
   "ServiceType": "Northwind"
 }
