--- a/module06/NorthwindMvcApp/NorthwindMvcApp.csproj
+++ b/module06/NorthwindMvcApp/NorthwindMvcApp.csproj
@@ -10,6 +10,8 @@
 		<AdditionalFiles Include="..\code-analysis.ruleset" Link="Properties\code-analysis.ruleset" />
 	</ItemGroup>
 	<ItemGroup>
+		<PackageReference Include="Microsoft.AspNet.Mvc" Version="5.2.7" />
+		<PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="3.1.21" />
 		<PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="3.1.21" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.21" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.1.21">
@@ -31,6 +33,9 @@
 	  <ProjectReference Include="..\Northwind.Services.EntityFrameworkCore.Blogging\Northwind.Services.EntityFrameworkCore.Blogging.csproj" />
 	  <ProjectReference Include="..\Northwind.Services.EntityFrameworkCore\Northwind.Services.EntityFrameworkCore.csproj" />
 	  <ProjectReference Include="..\Northwind.Services\Northwind.Services.csproj" />
+	</ItemGroup>
+	<ItemGroup>
+	  <Folder Include="ViewModels\Employee\" />
 	</ItemGroup>
 
 </Project>
